// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component List multiple items 1`] = `
<div
  className="component-list sc-bZQynM AMncx"
>
  <a
    className="sc-htoDjs jssEWI"
    href="/One"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw kXGagn"
      selected={false}
    >
      One
    </div>
  </a>
  <a
    className="sc-htoDjs jssEWI"
    href="/Two"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw kXGagn"
      selected={false}
    >
      Two
    </div>
  </a>
</div>
`;

exports[`Storyshots Component List single item 1`] = `
<div
  className="component-list sc-bZQynM AMncx"
>
  <a
    className="sc-htoDjs jssEWI"
    href="/One"
    onClick={[Function]}
  >
    <div
      className="sc-gzVnrw kXGagn"
      selected={false}
    >
      One
    </div>
  </a>
</div>
`;

exports[`Storyshots Component default example 1`] = `
<div
  className="sc-ifAKCX keGVmf"
>
  <div
    className="sc-EHOje fwuUJE"
  >
    <div
      className="sc-bdVaJa hLhmaC"
    >
      <div
        className="example-title sc-bxivhb gblRRH"
      >
        Default
      </div>
      <div
        className="sc-bwzfXH kwAnTY"
      >
        <div
          className="example-contents sc-htpNat gZyIoC"
        >
          <div
            style={
              Object {
                "color": "white",
              }
            }
          >
            Hello 
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component examples provided 1`] = `
<div
  className="sc-ifAKCX keGVmf"
>
  <div
    className="sc-EHOje fwuUJE"
  >
    <div
      className="sc-bdVaJa hLhmaC"
    >
      <div
        className="example-title sc-bxivhb gblRRH"
      >
        Example 1
      </div>
      <div
        className="sc-bwzfXH kwAnTY"
      >
        <div
          className="example-contents sc-htpNat gZyIoC"
        >
          <div
            style={
              Object {
                "color": "white",
              }
            }
          >
            Hello 
            Jake
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bdVaJa hLhmaC"
    >
      <div
        className="example-title sc-bxivhb gblRRH"
      >
        Example 2
      </div>
      <div
        className="sc-bwzfXH kwAnTY"
      >
        <div
          className="example-contents sc-htpNat gZyIoC"
        >
          <div
            style={
              Object {
                "color": "white",
              }
            }
          >
            Hello 
            Andreja
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component with react state 1`] = `
<div
  className="sc-ifAKCX keGVmf"
>
  <div
    className="sc-EHOje fwuUJE"
  >
    <div
      className="sc-bdVaJa hLhmaC"
    >
      <div
        className="example-title sc-bxivhb gblRRH"
      >
        Counter
      </div>
      <div
        className="sc-bwzfXH kwAnTY"
      >
        <div
          className="example-contents sc-htpNat gZyIoC"
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "snow",
                "color": "violet",
                "padding": "2rem",
              }
            }
          >
            <h2>
              0
            </h2>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Example base 1`] = `
<div
  className="sc-bdVaJa hLhmaC"
>
  <div
    className="example-title sc-bxivhb gblRRH"
  >
    Example 1
  </div>
  <div
    className="sc-bwzfXH kwAnTY"
  >
    <div
      className="example-contents sc-htpNat gZyIoC"
    >
      <div
        style={
          Object {
            "backgroundColor": "peachpuff",
            "color": "magneta",
            "padding": "1rem",
          }
        }
      >
        <h1>
          This is an example
        </h1>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Sidebar closed 1`] = `
<div
  className="sidebar sc-iwsKbI ftanjX"
>
  <div
    className="sc-fjdhpX gddroE"
  >
    <span
      className="sidebar-toggle sc-jzJRlG bGoKof"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-list fa-w-16 fa-lg "
        data-icon="list"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M128 116V76c0-8.837 7.163-16 16-16h352c8.837 0 16 7.163 16 16v40c0 8.837-7.163 16-16 16H144c-8.837 0-16-7.163-16-16zm16 176h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zM16 144h64c8.837 0 16-7.163 16-16V64c0-8.837-7.163-16-16-16H16C7.163 48 0 55.163 0 64v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16zm0 160h64c8.837 0 16-7.163 16-16v-64c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v64c0 8.837 7.163 16 16 16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Storyshots Sidebar open 1`] = `
<div
  className="sidebar sc-iwsKbI gSIGHZ"
>
  <div
    className="sc-fjdhpX gddroE"
  >
    <a
      className="sc-gqjmRU eYqZJu"
      href="/"
      onClick={[Function]}
    >
      <div
        className="title sc-VigVT jFCsNF"
      >
        <img
          alt=""
          className="logo sc-dnqmqq cnjRDI"
        />
        Snoopy
      </div>
    </a>
  </div>
  <hr
    className="sc-jTzLTM jEoeNn"
  />
  <div
    className="component-list sc-bZQynM AMncx"
  >
    <a
      className="sc-htoDjs jssEWI"
      href="/App"
      onClick={[Function]}
    >
      <div
        className="sc-gzVnrw kXGagn"
        selected={false}
      >
        App
      </div>
    </a>
  </div>
</div>
`;
